<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="60dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.android.cashr.activities.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/create_account_logo"
        android:background="@drawable/logo2"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/app_name"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_create_account_username"
        android:hint="@string/label_username"
        android:drawableLeft="@drawable/ic_user"
        android:drawableStart="@drawable/ic_user"
        android:drawablePadding="10dp"
        android:layout_marginTop="-25dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/et_create_account_password"
        android:layout_gravity="center_horizontal"
        android:hint="@string/label_password"
        android:drawableLeft="@drawable/ic_lock"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="10dp"
        android:layout_marginTop="5dp"
        />

    <com.andexert.library.RippleView
        android:id="@+id/more"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_create_account"
            android:text="@string/label_submit"
            android:textColor="#ffffffff"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/app_name"/>
    </com.andexert.library.RippleView>
</LinearLayout>
