<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.android.cashr.activities.LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_logo"
            android:background="@drawable/logo2"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/app_name"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_login_username"
            android:hint="@string/label_username"
            android:drawableLeft="@drawable/ic_user"
            android:drawableStart="@drawable/ic_user"
            android:drawablePadding="10dp"
            android:layout_marginTop="-25dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/et_login_password"
            android:layout_gravity="center_horizontal"
            android:hint="@string/label_password"
            android:drawableLeft="@drawable/ic_lock"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="10dp"
            android:layout_marginTop="5dp"
            />

        <com.andexert.library.RippleView
            android:id="@+id/more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
            
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_login"
                android:text="@string/label_login"
                android:textColor="#ffffffff"
                android:background="@color/colorPrimary"
                android:contentDescription="@string/app_name"/>
        </com.andexert.library.RippleView>
        
        
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center_horizontal"
        android:layout_alignParentEnd="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/label_no_account"
            android:id="@+id/text_no_account"/>

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
            <!--android:text="@string/label_create"-->
            <!--android:id="@+id/text_create_one"-->
            <!--android:textColor="@color/colorPrimary"-->
            <!--android:layout_marginLeft="10dp"/>-->

        <com.gc.materialdesign.views.ButtonFlat
            android:id="@+id/btn_login_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/label_create"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="center"
            android:layout_marginTop="-5dp"
            android:layout_marginLeft="5dp"/>
    </LinearLayout>

</RelativeLayout>
